# chunkify

./: .pre-commit-config.yaml  .pylintrc  Pipfile  README.adoc  chunkify.py  pyproject.toml  requirements-dev.txt  setup.cfg  test_chunkify.py
.github/workflows/: ci.yml
chunkify/: __init__.py
tests/: test_chunkify.py
