[metadata]
name = chunkify
version = 0.0.1
author = Jordan Williams
author_email = jordan@jwillikers.com
description = An implementation of the grouping function documented in the itertools Python module.
long_description = file: README.md
long_description_content_type = text/asciidoc
url = https://github.com/jwillikers/chunkify
project_urls =
    Bug Tracker = https://github.com/jwillikers/chunkify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
packages = chunkify
python_requires = 3.9
